@@ -1,0 +1,111 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Map>
+	<Width>500</Width>
+	<Height>400</Height>
+	<Extents>-1,-4,10,10</Extents>
+	<Projection>+init=epsg:4326</Projection>
+	<Layers>
+		<Layer>
+			<Styles>
+				<Style>
+					<LineWidth>2</LineWidth>
+					<LineColor>255,65,145,65</LineColor>
+					<FillColor>255,240,255,208</FillColor>
+					<LineStyle>Solid</LineStyle>
+				</Style>
+			</Styles>
+			<Projection></Projection>
+			<Id>pg1</Id>
+			<Data sourceType="Cumberland.Data.SimpleFeatureSource" sourceInstance="Cumberland.Data.SimpleFeatureSource">
+				<SimpleFeatureSource xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+					<Features>
+						<Feature xsi:type="Polygon">
+							<Id>0</Id>
+							<Rings>
+								<Ring>
+									<Points>
+										<Point>
+											<Id>0</Id>
+											<X>0</X>
+											<Y>0</Y>
+											<Z>0</Z>
+											<M>0</M>
+										</Point>
+										<Point>
+											<Id>0</Id>
+											<X>0</X>
+											<Y>5</Y>
+											<Z>0</Z>
+											<M>0</M>
+										</Point>
+										<Point>
+											<Id>0</Id>
+											<X>5</X>
+											<Y>5</Y>
+											<Z>0</Z>
+											<M>0</M>
+										</Point>
+										<Point>
+											<Id>0</Id>
+											<X>5</X>
+											<Y>0</Y>
+											<Z>0</Z>
+											<M>0</M>
+										</Point>
+										<Point>
+											<Id>0</Id>
+											<X>0</X>
+											<Y>0</Y>
+											<Z>0</Z>
+											<M>0</M>
+										</Point>
+									</Points>
+								</Ring>
+								<Ring>
+									<Points>
+										<Point>
+											<Id>0</Id>
+											<X>1</X>
+											<Y>1</Y>
+											<Z>0</Z>
+											<M>0</M>
+										</Point>
+										<Point>
+											<Id>0</Id>
+											<X>2</X>
+											<Y>1</Y>
+											<Z>0</Z>
+											<M>0</M>
+										</Point>
+										<Point>
+											<Id>0</Id>
+											<X>2</X>
+											<Y>2</Y>
+											<Z>0</Z>
+											<M>0</M>
+										</Point>
+										<Point>
+											<Id>0</Id>
+											<X>1</X>
+											<Y>2</Y>
+											<Z>0</Z>
+											<M>0</M>
+										</Point>										
+										<Point>
+											<Id>0</Id>
+											<X>1</X>
+											<Y>1</Y>
+											<Z>0</Z>
+											<M>0</M>
+										</Point>
+									</Points>
+								</Ring>
+							</Rings>
+						</Feature>
+					</Features>
+					<SimpleFeatureType>Polygon</SimpleFeatureType>
+				</SimpleFeatureSource>
+			</Data>
+		</Layer>
+	</Layers>
+</Map>
